[package]
name = "depth"
version = "0.0.0"
edition = "2021"
description = "Visualize crate.io dependencies as a Tree ├──."
license = "MIT"
keywords = ["depth", "tree", "cargo", "crate"]
repository = "https://github.com/wiseaidev/depth"
documentation = "https://docs.rs/depth/"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
crates_io_api = "0.8.2"
petgraph = "0.6.4"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
toml = "0.8.8"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = "thin"
strip = "symbols"